feat: Resource unit tests using sqlmock
* Remove tokens from data model
* Remove optional excessive user data
* Add user password field for hashed password storage
