# internal/static/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "apigo",
     "version": "0.1.1",
-    "description": "An application programming interface service template.\n",
+    "description": "An application programming interface service.\n",
     "license": {
       "name": "No License",
       "url": "https://choosealicense.com/no-permission/"
@@ -16,31 +16,27 @@
   ],
   "tags": [
     {
-      "name": "Account",
+      "name": "account",
       "description": "Account information and services."
     },
     {
-      "name": "Resources",
+      "name": "resources",
       "description": "Operations related to resources."
     },
     {
-      "name": "Tags",
+      "name": "tags",
       "description": "Operations related to resource tags."
     },
     {
-      "name": "Tokens",
-      "description": "Operations related to API tokens."
-    },
-    {
-      "name": "User",
+      "name": "user",
       "description": "User information and services."
     }
   ],
   "paths": {
-    "/account": {
+    "/api/v1/account": {
       "get": {
         "tags": [
-          "Account"
+          "account"
         ],
         "operationId": "get_account",
         "summary": "Get account",
@@ -59,7 +55,7 @@
       },
       "patch": {
         "tags": [
-          "Account"
+          "account"
         ],
         "operationId": "update_account",
         "summary": "Update account",
@@ -88,7 +84,7 @@
       },
       "put": {
         "tags": [
-          "Account"
+          "account"
         ],
         "operationId": "replace_account",
         "summary": "Replace account",
@@ -116,10 +112,10 @@
         }
       }
     },
-    "/account/repo": {
+    "/api/v1/account/repo": {
       "get": {
         "tags": [
-          "Account"
+          "account"
         ],
         "operationId": "get_account_repo",
         "summary": "Get account import repository",
@@ -138,7 +134,7 @@
       },
       "post": {
         "tags": [
-          "Account"
+          "account"
         ],
         "operationId": "create_account_repo",
         "summary": "Create account import repository",
@@ -166,7 +162,7 @@
         }
       }
     },
-    "/resources": {
+    "/api/v1/resources": {
       "parameters": [
         {
           "$ref": "#/components/parameters/search"
@@ -186,7 +182,7 @@
       ],
       "get": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "search_resources",
         "summary": "Search resources",
@@ -205,7 +201,7 @@
       },
       "post": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "create_resource",
         "summary": "Create resource",
@@ -233,7 +229,7 @@
         }
       }
     },
-    "/resources/{id}": {
+    "/api/v1/resources/{id}": {
       "parameters": [
         {
           "$ref": "#/components/parameters/id"
@@ -241,7 +237,7 @@
       ],
       "get": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "get_resource",
         "summary": "Get resource",
@@ -260,7 +256,7 @@
       },
       "patch": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "update_resource",
         "summary": "Update resource",
@@ -289,7 +285,7 @@
       },
       "put": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "replace_resource",
         "summary": "Replace resource",
@@ -318,7 +314,7 @@
       },
       "delete": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "delete_resource",
         "summary": "Delete resource",
@@ -336,10 +332,10 @@
         }
       }
     },
-    "/resources/import": {
+    "/api/v1/resources/import": {
       "post": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "create_resources_import",
         "summary": "Import resources",
@@ -357,7 +353,7 @@
         }
       }
     },
-    "/resources/{id}/import": {
+    "/api/v1/resources/{id}/import": {
       "parameters": [
         {
           "$ref": "#/components/parameters/id"
@@ -365,7 +361,7 @@
       ],
       "post": {
         "tags": [
-          "Resources"
+          "resources"
         ],
         "operationId": "create_resource_import",
         "summary": "Import resource",
@@ -383,7 +379,7 @@
         }
       }
     },
-    "/resources/{id}/tags": {
+    "/api/v1/resources/{id}/tags": {
       "parameters": [
         {
           "$ref": "#/components/parameters/id"
@@ -391,7 +387,7 @@
       ],
       "get": {
         "tags": [
-          "Tags"
+          "tags"
         ],
         "operationId": "get_tags",
         "summary": "Get tags",
@@ -410,7 +406,7 @@
       },
       "post": {
         "tags": [
-          "Tags"
+          "tags"
         ],
         "operationId": "create_tags",
         "summary": "Create tags",
@@ -439,7 +435,7 @@
       },
       "delete": {
         "tags": [
-          "Tags"
+          "tags"
         ],
         "operationId": "delete_tags",
         "summary": "Delete tags",
@@ -457,10 +453,10 @@
         }
       }
     },
-    "/resources/tags_multi_assignments": {
+    "/api/v1/resources/tags_multi_assignments": {
       "post": {
         "tags": [
-          "Tags"
+          "tags"
         ],
         "operationId": "create_tags_multi_assignment",
         "summary": "Create tags_multi_assignment",
@@ -489,7 +485,7 @@
       },
       "delete": {
         "tags": [
-          "Tags"
+          "tags"
         ],
         "operationId": "delete_tags_multi_assignment",
         "summary": "Delete tags_multi_assignment",
@@ -517,180 +513,10 @@
         }
       }
     },
-    "/tokens": {
-      "parameters": [
-        {
-          "$ref": "#/components/parameters/search"
-        },
-        {
-          "$ref": "#/components/parameters/size"
-        },
-        {
-          "$ref": "#/components/parameters/from"
-        },
-        {
-          "$ref": "#/components/parameters/order"
-        },
-        {
-          "$ref": "#/components/parameters/summary"
-        }
-      ],
+    "/api/v1/user": {
       "get": {
         "tags": [
-          "Tokens"
-        ],
-        "operationId": "search_tokens",
-        "summary": "Search tokens",
-        "description": "Retrieves tokens based on a search query.",
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/tokens"
-          },
-          "400": {
-            "$ref": "#/components/responses/user_error"
-          },
-          "500": {
-            "$ref": "#/components/responses/error"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Tokens"
-        ],
-        "operationId": "create_token",
-        "summary": "Create token",
-        "description": "Creates a new token.",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/token"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "$ref": "#/components/responses/token"
-          },
-          "400": {
-            "$ref": "#/components/responses/user_error"
-          },
-          "500": {
-            "$ref": "#/components/responses/error"
-          }
-        }
-      }
-    },
-    "/tokens/{id}": {
-      "parameters": [
-        {
-          "$ref": "#/components/parameters/id"
-        }
-      ],
-      "get": {
-        "tags": [
-          "Tokens"
-        ],
-        "operationId": "get_token",
-        "summary": "Get token",
-        "description": "Retrieves details for a specific token.",
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/token"
-          },
-          "400": {
-            "$ref": "#/components/responses/user_error"
-          },
-          "500": {
-            "$ref": "#/components/responses/error"
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "Tokens"
-        ],
-        "operationId": "update_token",
-        "summary": "Update token",
-        "description": "Updates details for a specific token.",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/token"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/token"
-          },
-          "400": {
-            "$ref": "#/components/responses/user_error"
-          },
-          "500": {
-            "$ref": "#/components/responses/error"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Tokens"
-        ],
-        "operationId": "replace_token",
-        "summary": "Replace token",
-        "description": "Updates details for a specific token.",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/token"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/token"
-          },
-          "400": {
-            "$ref": "#/components/responses/user_error"
-          },
-          "500": {
-            "$ref": "#/components/responses/error"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Tokens"
-        ],
-        "operationId": "delete_token",
-        "summary": "Delete token",
-        "description": "Deletes a specific token.",
-        "responses": {
-          "204": {
-            "description": "No response body."
-          },
-          "400": {
-            "$ref": "#/components/responses/user_error"
-          },
-          "500": {
-            "$ref": "#/components/responses/error"
-          }
-        }
-      }
-    },
-    "/user": {
-      "get": {
-        "tags": [
-          "User"
+          "user"
         ],
         "operationId": "get_user",
         "summary": "Get user",
@@ -709,7 +535,7 @@
       },
       "patch": {
         "tags": [
-          "User"
+          "user"
         ],
         "operationId": "update_user",
         "summary": "Update user",
@@ -738,7 +564,7 @@
       },
       "put": {
         "tags": [
-          "User"
+          "user"
         ],
         "operationId": "replace_user",
         "summary": "Replace user",
@@ -986,55 +812,6 @@
           }
         }
       },
-      "user_data": {
-        "type": "object",
-        "description": "Information about a user related to a resource. This information is only displayed when the resource is requested with ?user_details=true.\n",
-        "properties": {
-          "user_id": {
-            "type": "string",
-            "description": "The ID of the user.",
-            "examples": [
-              "11223344-5566-7788-9900-aabbccddeeff"
-            ]
-          },
-          "email": {
-            "type": "string",
-            "description": "The email address of the user.",
-            "examples": [
-              "test@test.com"
-            ]
-          },
-          "last_name": {
-            "type": "string",
-            "description": "The last name of the user.",
-            "examples": [
-              "Doe"
-            ]
-          },
-          "first_name": {
-            "type": "string",
-            "description": "The first name of the user.",
-            "examples": [
-              "Jane"
-            ]
-          },
-          "status": {
-            "type": "string",
-            "description": "The current status of the user.",
-            "enum": [
-              "active",
-              "inactive"
-            ],
-            "examples": [
-              "active"
-            ]
-          },
-          "data": {
-            "type": "object",
-            "description": "Additional data related to the user."
-          }
-        }
-      },
       "resource": {
         "type": "object",
         "description": "A resource connected to an external system.",
@@ -1146,11 +923,8 @@
             "type": "string",
             "description": "The ID of the user that created the resource.",
             "examples": [
-              "11223344-5566-7788-9900-aabbccddeeff"
+              "1234567890abcdef"
             ]
-          },
-          "created_by_user": {
-            "$ref": "#/components/schemas/user_data"
           },
           "updated_at": {
             "type": "integer",
@@ -1163,11 +937,8 @@
             "type": "string",
             "description": "The ID of the user that last updated the resource.",
             "examples": [
-              "11223344-5566-7788-9900-aabbccddeeff"
+              "1234567890abcdef"
             ]
-          },
-          "updated_by_user": {
-            "$ref": "#/components/schemas/user_data"
           }
         }
       },
@@ -1201,71 +972,6 @@
             "examples": [
               "and(name:*)"
             ]
-          }
-        }
-      },
-      "token": {
-        "type": "object",
-        "description": "An API token.",
-        "properties": {
-          "token_id": {
-            "type": "string",
-            "description": "The ID of the token.",
-            "examples": [
-              "1234567890-abcdef"
-            ]
-          },
-          "status": {
-            "type": "string",
-            "description": "The current status of the token.",
-            "enum": [
-              "active",
-              "inactive"
-            ],
-            "examples": [
-              "active"
-            ]
-          },
-          "expiration": {
-            "type": "integer",
-            "description": "The Unix epoch timestamp for when the token will expire. If not provided, the default will be 7 days from the time the token is created.\n",
-            "examples": [
-              1234567890
-            ]
-          },
-          "created_at": {
-            "type": "integer",
-            "description": "The Unix epoch timestamp for when the token was created.\n",
-            "examples": [
-              1234567890
-            ]
-          },
-          "created_by": {
-            "type": "string",
-            "description": "The ID of the user that created the token.",
-            "examples": [
-              "11223344-5566-7788-9900-aabbccddeeff"
-            ]
-          },
-          "created_by_user": {
-            "$ref": "#/components/schemas/user_data"
-          },
-          "updated_at": {
-            "type": "integer",
-            "description": "The Unix epoch timestamp for when the token was last updated.\n",
-            "examples": [
-              1234567890
-            ]
-          },
-          "updated_by": {
-            "type": "string",
-            "description": "The ID of the user that last updated the token.",
-            "examples": [
-              "11223344-5566-7788-9900-aabbccddeeff"
-            ]
-          },
-          "updated_by_user": {
-            "$ref": "#/components/schemas/user_data"
           }
         }
       },
@@ -1330,9 +1036,6 @@
               "1234567890abcdef"
             ]
           },
-          "created_by_user": {
-            "$ref": "#/components/schemas/user_data"
-          },
           "updated_at": {
             "type": "integer",
             "description": "The Unix epoch timestamp for when the user was last updated.",
@@ -1346,9 +1049,6 @@
             "examples": [
               "1234567890abcdef"
             ]
-          },
-          "updated_by_user": {
-            "$ref": "#/components/schemas/user_data"
           }
         }
       }
@@ -1433,29 +1133,6 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/tags_multi_assignment"
-            }
-          }
-        }
-      },
-      "tokens": {
-        "description": "A response containing an array of tokens.\n",
-        "content": {
-          "application/json": {
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/components/schemas/token"
-              }
-            }
-          }
-        }
-      },
-      "token": {
-        "description": "A response containing details about the token.\n",
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/token"
             }
           }
         }
